######### 2013-3-15  ##########
alter table shop_items_product add column is_split tinyint(1) NOT NULL;
alter table shop_items_product add column is_match tinyint(1) NOT NULL;
alter table shop_items_productsku add column is_split tinyint(1) NOT NULL;
alter table shop_items_productsku add column is_match tinyint(1) NOT NULL;
alter table shop_trades_replayposttrade add column order_num int(11) default 0;
######### 2013-3-13  ########
alter table shop_refunds_refund add column cs_status int(11) default 0;
alter table shop_refunds_refund add column mobile varchar(20) NOT NULL;
alter table shop_refunds_refund add column phone varchar(20) NOT NULL;
######### 2013-3-12  ########
alter table shop_refunds_product add column num int(11) NOT NULL;
######### 2013-3-8   ########
alter table shop_items_productsku drop column prod_outer_id;
######### 2013-3-6   #########
drop table shop_purchase_product;
drop table shop_purchase_productsku;
drop table shop_purchases_purchase;
drop table shop_purchases_item;
drop table shop_purchases_storage;
drop table shop_purchases_storageitem;

alter table shop_items_product drop column price;
alter table shop_items_product drop column purchase_product_id;
alter table shop_items_product drop column out_stock;
alter table shop_items_product add column wait_post_num int(11) DEFAULT NULL;
alter table shop_items_product add column cost decimal(5,2) DEFAULT NULL;
alter table shop_items_product add column std_purchase_price decimal(5,2) DEFAULT NULL;
alter table shop_items_product add column std_sale_price decimal(5,2) DEFAULT NULL;
alter table shop_items_product add column agent_price decimal(5,2) DEFAULT NULL;
alter table shop_items_product add column staff_price decimal(5,2) DEFAULT NULL;
alter table shop_items_product add column weight varchar(10) NOT NULL;
alter table shop_items_product add column memo varchar(1000) NOT NULL;

alter table shop_items_productsku drop column purchase_product_sku_id;