@@ -6,14 +6,14 @@ __author__ = 'meixqhi'
 
 class RefundAdmin(admin.ModelAdmin):
     list_display = ('refund_id','tid','oid','num_iid','buyer_nick','total_fee','refund_fee','payment'
-                    ,'company_name','sid','has_good_return','created','modified','good_status','order_status','status')
+                    ,'company_name','sid','has_good_return','is_reissue','created','good_status','order_status','status')
     list_display_links = ('refund_id','tid','buyer_nick')
     #list_editable = ('update_time','task_type' ,'is_success','status')
 
     date_hierarchy = 'created'
     #ordering = ['created_at']
 
-    list_filter   = ('seller_nick','has_good_return','good_status','order_status','status',)
+    list_filter   = ('seller_nick','has_good_return','good_status','is_reissue','order_status','status',)
     search_fields = ['refund_id','tid','oid','sid','buyer_nick']
 
 
