@@ -67,7 +67,7 @@
 	}
 	
 	.content-search {
-		width:500px;
+		width:45%;
 		height:20px;
 		display:fixed;
 	}
