@@ -1,3 +1,7 @@
+######### 2013-3-19  ##########
+alter table shop_refunds_refund add column is_reissue tinyint(1) NOT NULL;
+######### 2013-3-18  ##########
+alter table shop_refunds_product add column oid varchar(64) NOT NULL;
 ######### 2013-3-15  ##########
 alter table shop_items_product add column is_split tinyint(1) NOT NULL;
 alter table shop_items_product add column is_match tinyint(1) NOT NULL;
